# TabAudit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
configs/: example.yaml  example_multi.yaml
docs/: METRICS.md
tab_audit/: __init__.py  cli.py  config.py  registry.py
tab_audit/checks/: __init__.py  baseline_model.py  basic_stats.py  cleanliness.py  label_quality.py  leakage.py  schema_checks.py  unsup_learnability.py
tab_audit/connectors/: __init__.py  kaggle_connector.py  local_connector.py  openml_connector.py
tab_audit/io/: cache.py  dataset_inputs.py  read_tabular.py
tab_audit/leaderboard/: __init__.py  build.py
tab_audit/modeling/: __init__.py  backend.py  catboost_backend.py  lightgbm_backend.py  sklearn_backend.py  types.py  xgboost_backend.py
tab_audit/reporting/: report_html.py  report_json.py
tab_audit/scoring/: score.py
tab_audit/utils/: hashing.py  logging.py  sampling.py
tests/: test_backend_fallback.py  test_baseline_task_detection.py  test_cleanliness.py  test_cli_batch_resilience.py  test_connectors_kaggle.py  test_connectors_openml.py  test_dataset_inputs.py  test_dir_ingestion_multiple_csvs.py  test_leaderboard_build.py  test_rcpl_learnability.py  test_read_tabular.py  test_scoring.py  test_smoke_local.py
